Update login form placeholders to Chinese

--- a/auth.html
+++ b/auth.html
@@ -129,12 +129,12 @@
         <h2>WELCOME</h2>
         <form id="loginForm">
             <div class="input-group">
-                <input type="text" id="username" placeholder="Username" required autocomplete="off">
+                <input type="text" id="username" placeholder="帳號" required autocomplete="off">
             </div>
             <div class="input-group">
-                <input type="password" id="password" placeholder="Password" required>
+                <input type="password" id="password" placeholder="密碼" required>
             </div>
-            <button type="submit">Sign In</button>
+            <button type="submit">登入</button>
             <div id="error-msg">帳號或密碼錯誤</div>
         </form>
     </div>
