Change email domain from gmail.com to nsh.bread

--- a/register.html
+++ b/register.html
@@ -173,7 +173,7 @@
         
             // 1. 註冊帳號 (Supabase Auth)
             const { data, error: authError } = await supabase.auth.signUp({
-                email: user + "@gmail.com", // 帳號轉 Email 格式
+                email: user + "@nsh.bread", // 帳號轉 Email 格式
                 password: pass,
             });
         
