--- a/register.html
+++ b/register.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
     
     <style>
+        /* Trash Code for making github update faster*/
         /* --- 基礎設定 --- */
         * {
             margin: 0;
@@ -164,7 +165,7 @@
     <script>
         // 1. 初始化 Supabase (確保這段在整頁只出現一次)
         const supabaseUrl = 'https://ofuxzhfeqvihcgiucopx.supabase.co';
-        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...'; // 您的 Key
+         const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9mdXh6aGZlcXZpaGNnaXVjb3B4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc0NjQ4ODEsImV4cCI6MjA4MzA0MDg4MX0.pYDTBag5NgmUFxOzABWIytnMtUv-QloY31JYZaoZrmk-n';
         // 注意：CDN 版需使用 supabase.createClient 
         const _supabase = supabase.createClient(supabaseUrl, supabaseKey); 
         
