--- a/register.html
+++ b/register.html
@@ -165,7 +165,7 @@
     <script>
         // 1. 初始化 Supabase (確保這段在整頁只出現一次)
         const supabaseUrl = 'https://ofuxzhfeqvihcgiucopx.supabase.co';
-         const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9mdXh6aGZlcXZpaGNnaXVjb3B4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc0NjQ4ODEsImV4cCI6MjA4MzA0MDg4MX0.pYDTBag5NgmUFxOzABWIytnMtUv-QloY31JYZaoZrmk-n';
+         const supabaseKey = 'sb_publishable_nPKAEbmnXJWBOcbg7gB_Og_06LEITqt';
         // 注意：CDN 版需使用 supabase.createClient 
         const _supabase = supabase.createClient(supabaseUrl, supabaseKey); 
         
