Remove duplicate comment in register.html

--- a/register.html
+++ b/register.html
@@ -8,6 +8,7 @@
     
     <style>
         /* Trash Code for making github update faster*/
+        /* Trash Code for making github update faster*/
         /* --- 基礎設定 --- */
         * {
             margin: 0;
