--- a/register.html
+++ b/register.html
@@ -189,7 +189,7 @@
         try {
             // 1. 註冊帳號
             const { data, error: authError } = await _supabaseClient.auth.signUp({
-                email: user + "@nsh.bread",
+                email: user + "@gmail.com",
                 password: pass,
             });
 
