--- a/register.html
+++ b/register.html
@@ -167,9 +167,13 @@
     // 使用不同的變數名稱避開全域物件衝突
     const SB_URL = 'https://ofuxzhfeqvihcgiucopx.supabase.co';
     const SB_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9mdXh6aGZlcXZpaGNnaXVjb3B4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc0NjQ4ODEsImV4cCI6MjA4MzA0MDg4MX0.pYDTBag5NgmUFxOzABWIytnMtUv-QloY31JYZaoZrmk';
-    
-    // 關鍵修正：確保這裡使用的是全域 supabase 物件的 createClient 方法
-    const _supabaseClient = supabase.createClient(SB_URL, SB_KEY);
+
+    // 強制手動設定 headers (如果自動帶入失效)
+    const _supabaseClient = supabase.createClient(SB_URL, SB_KEY, {
+      global: {
+        headers: { 'apikey': SB_KEY }
+      }
+    });
     
     document.getElementById('registerForm').addEventListener('submit', async function(e) {
         e.preventDefault();
