--- a/auth.html
+++ b/auth.html
@@ -127,6 +127,16 @@
             transition: opacity 0.3s;
         }
 
+        .footer-link a {
+            color: #fff;
+            text-decoration: none;
+            font-weight: 600;
+        }
+
+        .footer-link a:hover {
+            text-decoration: underline;
+        }    
+
     </style>
 </head>
 <body>
@@ -142,6 +152,9 @@
             </div>
             <button type="submit">登入</button>
             <div id="error-msg">帳號或密碼錯誤</div>
+            <div class="footer-link">
+                還沒有帳號？ <a href="register.html">立即註冊</a>
+            </div>
         </form>
     </div>
 
