--- a/auth.html
+++ b/auth.html
@@ -161,12 +161,16 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script>
-        // 2. 初始化 Supabase
+        // 使用不同的變數名稱避開全域物件衝突
         const SB_URL = 'https://ofuxzhfeqvihcgiucopx.supabase.co';
-        const SB_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9mdXh6aGZlcXZpaGNnaXVjb3B4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc0NjQ4ODEsImV4cCI6MjA4MzA0MDg4MX0.pYDTBag5NgmUFxOzABWIytnMtUv-QloY31JYZaoZrmk-n';
-        
-        // 使用不同的變數名稱避開潛在的命名衝突
-        const _authClient = supabase.createClient(SB_URL, SB_KEY);
+        const SB_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9mdXh6aGZlcXZpaGNnaXVjb3B4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc0NjQ4ODEsImV4cCI6MjA4MzA0MDg4MX0.pYDTBag5NgmUFxOzABWIytnMtUv-QloY31JYZaoZrmk';
+    
+        // 強制手動設定 headers (如果自動帶入失效)
+        const _supabaseClient = supabase.createClient(SB_URL, SB_KEY, {
+          global: {
+            headers: { 'apikey': SB_KEY }
+          }
+        });
 
         document.getElementById('loginForm').addEventListener('submit', async function(e) {
             e.preventDefault();
