--- a/auth.html
+++ b/auth.html
@@ -166,7 +166,7 @@
         const SB_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9mdXh6aGZlcXZpaGNnaXVjb3B4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc0NjQ4ODEsImV4cCI6MjA4MzA0MDg4MX0.pYDTBag5NgmUFxOzABWIytnMtUv-QloY31JYZaoZrmk';
     
         // 強制手動設定 headers (如果自動帶入失效)
-        const _supabaseClient = supabase.createClient(SB_URL, SB_KEY, {
+        const _authClient = supabase.createClient(SB_URL, SB_KEY, {
           global: {
             headers: { 'apikey': SB_KEY }
           }
