--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
+<body>
+    <h1>你好</h1>
+</body>
+
 <script>
     /* Trash Code for making github update faster*/
     // 1. 初始化 (請確保 SB_KEY 是完整長度的那個)
