--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 
 <body>
     <h1>你好</h1>
+    <div style="background: rgba(255,255,255,0.1); padding: 10px; color: white; text-align: right;">
+    <span>目前登入：<strong id="user-display">載入中...</strong></span>
+    <button onclick="handleLogout()" style="margin-left: 10px; padding: 5px 15px; border-radius: 15px; cursor: pointer; background: #ff4b2b; color: white; border: none;">
+        登出
+    </button>
+</div>
 </body>
 
 <script>
