Change color variable from OKLCH to hex value

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         :root {
             /* 指定的 OKLCH 顏色 */
-            --color-blue-900: oklch(37.9% .146 265.522);
+            --color-blue-900: #001529;
         }
 
         * {
