--- a/index.html
+++ b/index.html
@@ -455,6 +455,83 @@
 					"44.736 Mbps"
 				],
 				correctAnswer:"44.736 Mbps"
+			},
+			{
+				q:"下列何者是機密性(confidentiality)的正確意義？",
+				img:"",
+				options: [
+					"確保使用的資料為未遭人竄改的正確資料",
+					"確保網路通訊中的參與者，不會拒絕承認他們的行為",
+					"確保資訊服務隨時可被取用",
+					"防止未經授權者存取資料或訊息"
+				],
+				correctAnswer:"防止未經授權者存取資料或訊息"
+			},
+			{
+				q:"下列哪個選項會造成資料完整性(integrity)受影響？",
+				img:"",
+				options: [
+					"機密資料外洩",
+					"檔案遭毀損而無法存取",
+					"系統無法登入",
+					"資料以明文方式傳輸"
+				],
+				correctAnswer:"檔案遭毀損而無法存取"
+			},
+			{
+				q:"請問下列何項說明內容是關於可用性(availability)的敘述？",
+				img:"",
+				options: [
+					"使用者以帳號及密碼登入管理資訊系統",
+					"機房故障，導致無法使用網路服務",
+					"親自遞送機密文件給主管核閱",
+					"人資系統異常，導致薪資計算錯誤"
+				],
+				correctAnswer:"機房故障，導致無法使用網路服務"
+			},
+			{
+				q:"下列有關惡意程式(Malicious programs)的敘述何者錯誤？",
+				img:"",
+				options: [
+					"後門程式指的是可未經一般安全存取程式而獲得權限",
+					"邏輯炸彈指的是一種程式的片段，當符合某種條件時，就會「引爆」此炸彈，可能造成檔案刪除或是其他傷害",
+					"特洛伊木馬是一個藏有隱含程式碼的有用程式指令，但呼叫後它將會執行一些不需要或是有害的函數",
+					"電腦病毒不須依附在其他程式或檔案，而可以獨立執行"
+				],
+				correctAnswer:"電腦病毒不須依附在其他程式或檔案，而可以獨立執行"
+			},
+			{
+				q:"在簽證使不能否認(Non-repudiation)之安全考量上，面對否認收發資料之安全威脅，可使用下列何種安全防護法？",
+				img:"",
+				options: [
+					"加密系統",
+					"數位簽章",
+					"時戳",
+					"身分辨識碼"
+				],
+				correctAnswer:"數位簽章"
+			},
+			{
+				q:"關於對稱式與非對稱式加密之敘述，何者錯誤？",
+				img:"",
+				options: [
+					"DES是一種對稱式加密演算法",
+					"RSA是一種非對稱式加密演算法",
+					"非對稱式加密速度較慢",
+					"非對稱意指使用收方公鑰加密，用送方私鑰解密"
+				],
+				correctAnswer:"非對稱意指使用收方公鑰加密，用送方私鑰解密"
+			},
+			{
+				q:"下列哪種行為並不違反智慧財產權？",
+				img:"",
+				options: [
+					"複製有版權的軟體給他人使用",
+					"使用或張貼網路上的文章及圖畫",
+					"推薦網上購物商品資訊與朋友",
+					"下載網上電影並分享與他人"
+				],
+				correctAnswer:"推薦網上購物商品資訊與朋友"
 			}
         ];
 
@@ -539,6 +616,4 @@
         }
     </script>
 </body>
-
 </html>
-
